--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -32,6 +32,7 @@
     "mini-css-extract-plugin": "^1.3.7",
     "pretty-bytes": "^5.5.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
