--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -22,6 +22,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.20",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "babel-loader": "^8.2.2",
     "chart.js": "^2.9.4",
     "copy-webpack-plugin": "^7.0.0",
