--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -30,6 +30,7 @@
     "file-loader": "^6.2.0",
     "lodash-es": "^4.17.20",
     "luxon": "^1.26.0",
+    "material-table": "^1.69.2",
     "mini-css-extract-plugin": "^1.3.7",
     "pretty-bytes": "^5.5.0",
     "react": "^17.0.1",
