--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -17,10 +17,9 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.12.16",
-    "@babel/preset-flow": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@material-ui/core": "^4.11.3",
-    "@material-ui/data-grid": "^4.0.0-alpha.20",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "babel-loader": "^8.2.2",
@@ -43,7 +42,7 @@
     "redux-thunk": "^2.3.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^0.21.0",
-    "typescript": "^4.1.5",
+    "typescript": "^4.2.3",
     "webpack": "^5.22",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
