--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -37,9 +37,10 @@
     "material-table": "^1.69.3",
     "mini-css-extract-plugin": "^1.3.7",
     "pretty-bytes": "^5.5.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.20.10",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
@@ -57,6 +58,10 @@
     "build-dev": "NODE_ENV=development ./node_modules/.bin/webpack",
     "dev-serve": "NODE_ENV=development ./node_modules/.bin/webpack serve --hot --devtool source-map --liveReload --inline --content-base public --port 8050 --host 127.0.0.1 --config webpack.config.js",
     "lint": "NODE_ENV=development ./node_modules/.bin/eslint .",
-    "build-prod": "NODE_ENV=production ./node_modules/.bin/webpack --progress"
+    "build-prod": "NODE_ENV=production ./node_modules/.bin/webpack --progress",
+    "compile-intl": "formatjs compile"
+  },
+  "devDependencies": {
+    "@formatjs/cli": "^4.2.33"
   }
 }
