--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-formatjs": "^10.3.8",
     "chart.js": "^2.9.4",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.2",
@@ -59,7 +60,8 @@
     "dev-serve": "NODE_ENV=development ./node_modules/.bin/webpack serve --hot --devtool source-map --liveReload --inline --content-base public --port 8050 --host 127.0.0.1 --config webpack.config.js",
     "lint": "NODE_ENV=development ./node_modules/.bin/eslint .",
     "build-prod": "NODE_ENV=production ./node_modules/.bin/webpack --progress",
-    "compile-intl": "formatjs compile"
+    "intl-extract": "formatjs extract 'components/**/*.tsx' --out-file lang/en.json",
+    "intl-compile": "formatjs compile lang/uk.json --ast --out-file compiled-lang/uk.json"
   },
   "devDependencies": {
     "@formatjs/cli": "^4.2.33"
