--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
+    "json-loader": "^0.5.7",
     "lodash-es": "^4.17.20",
     "luxon": "^1.26.0",
     "material-table": "^1.69.3",
@@ -61,9 +62,11 @@
     "lint": "NODE_ENV=development ./node_modules/.bin/eslint .",
     "build-prod": "NODE_ENV=production ./node_modules/.bin/webpack --progress",
     "intl-extract": "formatjs extract 'components/**/*.tsx' --out-file lang/en.json",
-    "intl-compile": "formatjs compile lang/uk.json --ast --out-file compiled-lang/uk.json"
+    "intl-compile": "formatjs compile-folder --ast lang dist/lang"
   },
   "devDependencies": {
-    "@formatjs/cli": "^4.2.33"
+    "@formatjs/cli": "^4.2.33",
+    "@formatjs/ts-transformer": "^3.4.10",
+    "eslint-plugin-formatjs": "^2.17.7"
   }
 }
