--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -65,8 +65,8 @@
     "dev-serve": "NODE_ENV=development ./node_modules/.bin/webpack serve --hot --devtool source-map --liveReload --inline --content-base public --port 8050 --host 127.0.0.1 --config webpack.config.js",
     "lint": "NODE_ENV=development ./node_modules/.bin/eslint .",
     "build-prod": "NODE_ENV=production ./node_modules/.bin/webpack --progress",
-    "intl-extract": "formatjs extract 'components/**/*.tsx' --out-file lang/en.json",
-    "intl-compile": "formatjs compile-folder --ast lang dist/lang",
+    "intl-extract": "formatjs extract 'components/**/*.tsx' --out-file lang/en.json --format=transifex",
+    "intl-compile": "formatjs compile-folder --ast lang dist/lang --format=transifex",
     "transifex-push": "tx push --source",
     "transifex-pull": "tx pull --all"
   },
