--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -57,6 +57,6 @@
     "build-dev": "NODE_ENV=development ./node_modules/.bin/webpack",
     "dev-serve": "NODE_ENV=development ./node_modules/.bin/webpack serve --hot --devtool source-map --liveReload --inline --content-base public --port 8050 --host 127.0.0.1 --config webpack.config.js",
     "lint": "NODE_ENV=development ./node_modules/.bin/eslint .",
-    "build-prod": "NODE_ENV=production ./node_modules/.bin/webpack --progress"
+    "build-prod": "NODE_ENV=production node ./node_modules/.bin/webpack --progress"
   }
 }
